--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect": "^3.7.0",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
+    "phaser": "^3.87.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
