testing need improvements to work. and move all to some another library

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ﻿VITE_PFX_PATH=aspnet-dev-cert.pfx
 VITE_PFX_PASSPHRASE=ola1234
 VITE_API_URL=https://localhost:7039
+ABLY_API_KEY=aNq_iQ.2wLnag:L4sync85NKeAesU6yUY8vjASxTIlm0xS6UfyGgyhhk8
