--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "ably": "^2.6.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "connect": "^3.7.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "formik": "^2.4.6",
+    "p2": "^0.7.1",
     "phaser": "^3.87.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,7 +29,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.2",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.6",
+    "@types/p2": "^0.7.45",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
